brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_c_style_for_loop.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "for ((i=0; i<5; i++)); do echo $i; done",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ArithmeticForClause(ArithmeticForClauseCommand(
                initializer: Some(UnexpandedArithmeticExpr(
                  value: "i=0",
                )),
                condition: Some(UnexpandedArithmeticExpr(
                  value: "i<5",
                )),
                updater: Some(UnexpandedArithmeticExpr(
                  value: "i++",
                )),
                body: DoGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "$i",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
